[gd_scene load_steps=6 format=2]

[ext_resource path="res://Enemy/Regular/Textures/fish_2.png" type="Texture" id=1]
[ext_resource path="res://Enemy/Regular/Scripts/swordfish.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17.4105, 1.80676 )

[sub_resource type="CircleShape2D" id=2]
radius = 230.764

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 31.7705, 10 )

[node name="Swordfish" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -29.1578, 1.4692 )
rotation = -0.00950909
shape = SubResource( 1 )

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
rotation = -0.00151974
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 9.04165, 0.291672 )
shape = SubResource( 3 )

[node name="PatrollingTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="IdleTimer" type="Timer" parent="."]
